# Betriebssysteme

./: Kopfzeile.txt
Praktikum2/: Aufgabe1-3a.txt
Praktikum2/Aufgabe3/include/: PyramidBlock.h
Praktikum2/Aufgabe3/src/: Field.cpp  World.cpp
Praktikum3/GemeinsamerOrdner/oostubs/x64/: CMakeLists.txt  Makefile  README.md  common.mk  main.cc  types.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/: main.d  system  system64
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/debug/gdb/: handler.asm.d  handler.d  protocol.d  state.d
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/device/: keyboard.d  panic.d  serial_stream.d  watch.d
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/guard/: guardian.d
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/machine/: context.asm.d  context.d  key.d  keyctrl.d  plugbox.d
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/meeting/: bell.d  semaphore.d  waitingroom.d
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/thread/: assassin.d  dispatcher.d  idlethread.d  scheduler.d  thread.d
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/user/app2/: Block.d  CubeBlock.d  Field.d  PyramidBlock.d  World.d
Praktikum3/GemeinsamerOrdner/oostubs/x64/.backup_build/utils/: libcc.d  random.d  strutil.d
Praktikum3/GemeinsamerOrdner/oostubs/x64/boot/: interrupts.asm  startup.asm  startup_ap.asm
Praktikum3/GemeinsamerOrdner/oostubs/x64/boot/multiboot/: data.h  header.asm
Praktikum3/GemeinsamerOrdner/oostubs/x64/compiler/: sections.ld
Praktikum3/GemeinsamerOrdner/oostubs/x64/debug/: kernelpanic.h  output.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/debug/gdb/: handler.asm  handler.h  state.h  stub.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/device/: cga_stream.h  panic.h  serial_stream.h  watch.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/guard/: gate.h  secure.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/machine/: apicsystem.h  cga_screen.h  context.asm  context.h  cpu.h  fpu.h  idt.h  ioapic.h  ioapic_registers.h  key.h  keyctrl.h  keydecoder.h  lapic.h  lapic_registers.h  plugbox.h  serial.h  ticketlock.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/meeting/: bell.h  bellringer.h  semaphore.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/object/: bbuffer.h  queue.h  strbuf.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/syscall/: guarded_keyboard.h  guarded_semaphore.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/thread/: assassin.h  scheduler.h  thread.h  wakeup.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/user/app1/: appl.cc
Praktikum3/GemeinsamerOrdner/oostubs/x64/user/app2/: Array.h  Block.cc  Block.h  CubeBlock.h  Field.cc  PyramidBlock.cc  PyramidBlock.h  World.cc  World.h  kappl.cc  kappl.h  kappltest.cc  kappltest.h
Praktikum3/GemeinsamerOrdner/oostubs/x64/utils/: random.h  strutil.h
Praktikum3/oostubs/x64/: CMakeLists.txt  main.cc
Praktikum4/Praktiku_Aufgabe02_Vorlage/.build/: system  system64
Praktikum5/keyBoardDriver/: CMakeLists.txt  Makefile  common.mk  compiler.h  main.cc  types.h
Praktikum5/keyBoardDriver/boot/: sections.ld  startup.cc
Praktikum5/keyBoardDriver/debug/: assert.cc  assert.h  kernelpanic.h  null_stream.h  output.h
Praktikum5/keyBoardDriver/debug/gdb/: handler.asm  handler.cc  init.cc  protocol.cc  stub.h
Praktikum5/keyBoardDriver/dep/: acpi.d  apicsystem.d  assassin.d  assert.d  bell.d  bellringer.d  cgascr.d  console.d  dispatcher.d  gdt.d  guard.d  guarded_bell.d  guarded_keyboard.d  guardian.d  handler.d  idlethread.d  init.d  ioapic.d  kappl.d  key.d  keyboard.d  keyctrl.d  keydecoder.d  lapic.d  libcc.d  main.d  null_stream.d  panic.d  plugbox.d  protocol.d  scheduler.d  semaphore.d  serial.d  startup.d  thread.d  waitingroom.d  watch.d
Praktikum5/keyBoardDriver/device/: cgastr.cc  cgastr.h  console.cc  console.h  keyboard.cc  keyboard.h  panic.cc  panic.h  watch.cc  watch.h
Praktikum5/keyBoardDriver/exercises/: CGA_screen.markdown  apic_external_interrupts.markdown  apictimer.markdown  assembler.markdown  aufgabe0.markdown  aufgabe1.markdown  aufgabe2.markdown  aufgabe3.markdown  aufgabe4.markdown  aufgabe5.markdown  aufgabe6.markdown  cpp.markdown  frontpage.markdown  keyboard.markdown  umgebung-i4.markdown
Praktikum5/keyBoardDriver/guard/: gate.h  guard.cc  guard.h  guardian.cc  guardian.h  secure.h
Praktikum5/keyBoardDriver/machine/: acpi.cc  acpi.h  apicsystem.cc  apicsystem.h  cgascr.cc  cgascr.h  cpu.h  gdt.cc  gdt.h  io_port.h  ioapic.cc  ioapic.h  ioapic_registers.h  key.cc  key.h  keyctrl.cc  keyctrl.h  keydecoder.cc  keydecoder.h  lapic.cc  lapic.h  lapic_registers.h  mp_registers.h  plugbox.cc  plugbox.h  serial.cc  serial.h  spinlock.h  ticketlock.h  toc.asm  toc.cc  toc.h
Praktikum5/keyBoardDriver/meeting/: bell.cc  bell.h  bellringer.cc  bellringer.h  semaphore.cc  semaphore.h  waitingroom.cc  waitingroom.h
Praktikum5/keyBoardDriver/object/: bbuffer.h  o_stream.cc  o_stream.h  queue.h  queuelink.h  strbuf.cc  strbuf.h
Praktikum5/keyBoardDriver/syscall/: guarded_bell.cc  guarded_bell.h  guarded_keyboard.cc  guarded_keyboard.h  guarded_scheduler.h  guarded_semaphore.h
Praktikum5/keyBoardDriver/thread/: assassin.cc  dispatcher.cc  dispatcher.h  idlethread.cc  idlethread.h  scheduler.cc  scheduler.h  thread.cc  thread.h  wakeup.h
Praktikum5/keyBoardDriver/user/app/: kappl.cc  kappl.h
Praktikum5/keyBoardDriver/utils/: libcc.cc  math.h
Uebung1/: Aufgabe1-2.txt  Aufgabe3.txt  main.cpp
Uebung10/: BS_Uebungsblatt_10.goodnotes
Uebung2/: Nr2-3.txt
Uebung3/Aufgabe3/src/: Scheduler.cpp  main.cpp
Uebung7/: Aufgabe2d.txt
Uebung7/ErzeugerVerbraucherLocks/: CMakeCache.txt
Uebung7/ErzeugerVerbraucherMutex/: CMakeCache.txt  ErzeugerVerbraucherMutex  Makefile  cmake_install.cmake
Uebung8/: Uebungsblatt08.txt
Uebung8/Uebung8A2/: CMakeCache.txt  CMakeLists.txt  Makefile  Reader.cpp  Reader.h  Uebung8A2  Writer.cpp  Writer.h  cmake_install.cmake  main.cpp
praktikum1/: Aufgabe1-2.txt
(+54 files in other folders)
